--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="application/javascript">
     version = Math.floor(Math.random() * 1000);
-    var files = ["camera","particle","keys","sound","entity","hero","enums","tile","utility","level","cart",
-    "game"];
+    var files = ["audio","camera","particle","keys","sound","entity","hero","enums","tile","utility","level","cart","game"];
     for (f of files) {
       document.write("<script type='application/javascript' src='assets/js/" + f + ".js?" + version + "'\><\/script>");
     }
